# PlanetTerp-Predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  upgrade.md
.github/workflows/: ci.yml
api/: __init__.py  main.py  repository.py  schemas.py
app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
app/scripts/: smoke-dashboard.cjs
app/src/: App.tsx  api.ts  styles.css  types.ts
config/: __init__.py  config.py
docs/: api.md  case_study.md  dashboard.md  data_dictionary.md  deployment.md  experiments.md  feature_catalog.md  limitations.md  methodology.md  modeling.md
planetterp_predictor/: __init__.py  __main__.py  cli.py  data_artifacts.py  data_validation.py  experiment_tracking.py  settings.py
src/: __init__.py  data_processor.py  evaluator.py  feature_extractor.py  model_specs.py  model_trainer.py
tests/: __init__.py  test_api_endpoints.py  test_api_repository.py  test_data_artifacts.py  test_feature_extractor.py  test_model_training.py
utils/: __init__.py  helpers.py
